--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colorlib</title>
-
-
-
-
+    <title>Ahmed portfolio</title>
 </head>
 
 <style>
